test_suite/tests/ui/fail/invalid_attribute_key/invalid_arg_key.rs
use clapi::macros::*;

#[command]
#[arg(number, abc="hello")]
fn app(number: String){}

fn main(){}